# crossing_road_game

./: .gitignore  ArchitextureDiagram.md  CMakeLists.txt  LICENSE  README.md
include/: logger.hpp
include/core/: CGAME.hpp
include/managers/: Config.hpp  Manager.hpp
include/states/: MenuState.hpp  PlayingState.hpp  State.hpp
include/system/: config.hpp  resourceManager.hpp
includes/: common.hpp
libraries/: libraries.txt
libraries/SFML-3.1.0/include/mbedtls/: mbedtls_config.h
libraries/SFML-3.1.0/lib/cmake/FLAC/: targets.cmake
libraries/SFML-3.1.0/lib/cmake/MbedTLS/: MbedTLSConfigVersion.cmake  MbedTLSTargets-debug.cmake  MbedTLSTargets-release.cmake  MbedTLSTargets.cmake
libraries/SFML-3.1.0/lib/cmake/Ogg/: OggConfigVersion.cmake
libraries/SFML-3.1.0/lib/cmake/SFML/: SFMLAudioDependencies.cmake  SFMLConfig.cmake  SFMLConfigVersion.cmake  SFMLGraphicsDependencies.cmake  SFMLGraphicsStaticTargets-debug.cmake  SFMLGraphicsStaticTargets-release.cmake  SFMLGraphicsStaticTargets.cmake  SFMLNetworkDependencies.cmake  SFMLNetworkStaticTargets.cmake  SFMLWindowDependencies.cmake
libraries/SFML-3.1.0/lib/cmake/harfbuzz/: harfbuzzConfig-debug.cmake  harfbuzzConfig-release.cmake  harfbuzzConfig.cmake
libraries/SFML-3.1.0/lib/cmake/libssh2/: FindMbedTLS.cmake  libssh2-config.cmake  libssh2-targets-debug.cmake  libssh2-targets-release.cmake  libssh2-targets.cmake
source/: Crossing.cpp  crossing.cpp
source/core/: CGAME.cpp
source/managers/: Config.cpp
source/states/: MenuState.cpp  PlayingState.cpp
sources/: crossing.cpp
